# GaitSyncAR_NRF_Sense

./: CMakeLists.txt  README.md  README.rts  README.txt  app.overlay  prj.conf
boards/: nrf52840dk_nrf52840.overlay
boards/boards/: xiao_ble_nrf52840_sense.overlay
include/: app_events.h  battery_monitor.h  ble_handler.h  clock_sync.h  device_role.h  haptic.h  imu_step.h  led_pwm.h  nfc_handler.h
src/: battery_monitor.c  ble.c  clock_sync.c  device_role.c  haptic.c  imu_step.c  led_pwm.c  main.c  nfc.c
sysbuild/vpr_launcher/: prj.conf
